# eframe-multinode

./: .gitignore  Cargo.toml  README.md  build.rs  eframe-multinode-c0fd2267b50fd98d.js  eframe-multinode-c0fd2267b50fd98d_bg.wasm  index.html  justfile  sw.js
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
crates/bestsign-plugin/: Cargo.toml
crates/bestsign-plugin/src/: bindings.rs  lib.rs
crates/bestsign-plugin/wit/: world.wit
crates/peer-book/: Cargo.toml  README.md  build.rs  justfile
crates/peer-book/src/: bindings.rs  contact_book.rs  lib.rs  peer-book.rhai
crates/peer-book/src/contact_book/: autosurgeon_vlad.rs
crates/peer-book/wit/: world.wit
crates/pipepad/: Cargo.toml
crates/pipepad/src/: bindings.rs  lib.rs  pipepad.rhai
crates/pipepad/wit/: world.wit
crates/wallet-plugin/: Cargo.toml  rustfmt.toml
crates/wallet-plugin/.cargo/: config.toml
crates/wallet-plugin/src/: bindings.rs  lib.rs
crates/wallet-plugin/wit/: world.wit
src/: app.rs  lib.rs  main.rs
src/app/: error.rs  file_dialog.rs  platform.rs  rdx_runner.rs  widgets.rs
src/app/file_dialog/: native.rs
src/app/platform/: native.rs  peerpiper.rs  piper.rs  web.rs
src/app/platform/native/: chat.rs  cloudflare.rs  error.rs  peerpiper.rs  settings.rs  storage.rs  utils.rs
src/app/platform/web/: chat.rs  commander.rs  peerpiper.rs  piper.rs  settings.rs  storage.rs  web_error.rs  widget.rs
src/app/rdx_runner/: debouncer.rs  layer.rs  state.rs
src/app/rdx_runner/web/: debouncer.rs  state.rs
wit/: host.wit
