[package]
name = "peer-book"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }
multicid = { git = "https://github.com/DougAnderson444/multicid.git", branch = "external-prover" }
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
rhai = "1.20.1"

[build-dependencies]
html-to-egui = { workspace = true }
html-egui-bindgen = { workspace = true }
rhai = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:peer-book"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"host:component" = { path = "wit/deps" }
"wasi:io" = { path = "../../wit/deps" }
