[package]
name = "wallet-plugin"
version = "0.1.0"
edition = "2021"

# forced-target = "wasm32-unknown-unknown"

[dependencies]
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }
seed-keeper-core = { git = "https://github.com/DougAnderson444/seed-keeper.git" }
rand = "0.8"
getrandom = { version = "0.2", features = ["custom"] }
bestsign-core = { git = "ssh://git@github.com/DougAnderson444/bestsign.git" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:wallet-plugin"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"host:component" = { path = "wit/deps" }
